<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HyunSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="exp2_1">이 게임은 9X9 스도쿠 입니다. </string>
	<string name="exp2_2">친한 친구에게 카카오톡으로\n     게임을 선물해보세요.</string>
	<string name="exp2_3">친구와 함께 하는 게임에 재미가 두배!\n포인트도 적립할 수 있어요!</string>
	<string name="exp2_4">아래 버튼을 누르면 카카오톡으로 연결됩니다.</string>
	<string name="exp2_5">기타 버그신고는 아래 이메일을 통해 접수해주세요.</string>
	<string name="exp2_6">---게임방법---\n스도쿠 게임방법 : 가로,세로 9칸씩 \n총 81칸으로 이뤄진 정사각형의 가로, 세로줄에 \n1~9의 숫자를 겹치지 않게 적으면 완료!</string>
	<string name="exp2_7">---버튼설명---\nNew = 새로게임 Continue = 이어서하기 \nEnd = 게임종료 포인트확인 = 자기점수확인</string>
	<string name="exp2_8">1.Make버튼을 눌러 게임을 시작한다.\n2.문제를 열심히 해결한다.\n3.정답비교를 통해 오답을 체크하고 \n포인트를 적립한다. \n\n기타 문의사항이 있으시면\n 부가기능 버튼을 눌러주세요.\n\n제작자 : 대전대학교 컴퓨터공학과 이승현</string>
	<string name="exp2_9">본 게임은 카카오톡과\n아무 관련이 없는\n평범한 스도쿠게임임을 알려드립니다!\n </string>
	<string name="exp2_10">게임을 저장한다면\n얻을수 있는 포인트가 제한된다는 점\n유의하시기 바랍니다. </string>
	<string name="exp2_11">저장데이터를\n삭제하였을 경우\n복구가 불가능하니 \n유의하시기 바랍니다. </string>
	<string name="exp2_12">포인트로 이용할 수 있는\n상품 및 서비스는 준비중에 있습니다.\n이용에 불편을 드려 정말죄송합니다.\n빠른 시일내로 준비하겠습니다. </string>
</resources>
